baget-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baget
  namespace: baget
  labels:
    app: baget
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  tls:
    - hosts:
        - nuget.lucasnet.int
      secretName: lucasnet-tls
  rules:
    - host: nuget.lucasnet.int
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: baget
                port:
                  number: 80
